--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <h1 class="header__title">Kingdom Hearts 1.5 HD REmix Achievements</h1>
     </header>
     <main class="content">
-        <section class="achievements"></section>
+        <section class="achievements">
+            <div class="achievements__card">
+                <h2 class="achievemets__title">La madriguera del Conejo</h2>
+                <img class="achievements__trophy-image" src="https://images.steamusercontent.com/ugc/2508025646346684491/9E5714D2930B35B159DB0CCB20E07205FAA44296/" alt="alice achievement">
+                <p class="achievements__description">Después de cerrar la cerradura del País de las Maravillas. Salta una vez vuelves al mapamundi.</p>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <p class="footer__description"></p>
