first card and styles

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="achievements__card">
                 <h2 class="achievemets__title">La madriguera del Conejo</h2>
                 <img class="achievements__trophy-image" src="https://images.steamusercontent.com/ugc/2508025646346684491/9E5714D2930B35B159DB0CCB20E07205FAA44296/" alt="alice achievement">
-                <p class="achievements__description">Después de cerrar la cerradura del País de las Maravillas. Salta una vez vuelves al mapamundi.</p>
+                <p class="achievements__description">Sella la cerradura en el país de las Maravillas</p>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <p class="footer__description"></p>
+        <p class="footer__description">Web created by. Rixuk</p>
     </footer>
     </div>
     <!--Templates-->
